--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /.vshistory
 /TrayControl/.vshistory
 /TrayControlInstaller/.vshistory
+/AdvInstaller/TrayControlInstaller-cache
