Removed wix installer for now

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /TrayControl/.vshistory
 /TrayControlInstaller/.vshistory
 /AdvInstaller/TrayControlInstaller-cache
+/TrayControl.Installer.Wix6
