--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,11 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+* text=auto eol=lf
+*.cs     text eol=lf
+*.csproj text eol=lf
+*.yml    text eol=lf
+*.sh     text eol=lf
+*.ps1    text eol=lf
+*.bat    text eol=crlf
