--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,9 @@
 
 # Default severity for all analyzer diagnostics
 dotnet_analyzer_diagnostic.severity = none
+root = true
+
+[*]
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
