--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ FodyWeavers.xsd
 /TrayControlInstaller/.vshistory
 /AdvInstaller/TrayControlInstaller-cache
 /TrayControl.Installer.Wix6
+/New folder
